Fixed mobile menu from causing side scroll on mobile

--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -69,6 +69,7 @@ a {
 
 body {
     overflow-x: hidden;
+    position: relative;
 }
 
 .zeroPadding {
