--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,6 @@
 header {
     padding:10px 0;
+    overflow-x: hidden;
     
     #logo {
         max-width: 250px;
@@ -157,5 +158,9 @@ header {
              display: none;
         }
     }
+    
+    &.mobileOn {
+        overflow-x:visible;
+    }    
     
 }
